Cambio de datos del Contenido

--- a/SitioTareaMultimedia/Contenido.html
+++ b/SitioTareaMultimedia/Contenido.html
@@ -8,7 +8,11 @@
 <center><H2>ESCUELA SUPERIOR POLITECNICA DE CHIMBORAZO</H2><BR>
 <H3>MAESTRIA EN INFORMATICA EDUCATIVA</H3><BR>
 <img src="Imagenes/Espoch130x130.png" width="150" height="160"><br>
-<H3>DISEÑO DE PAGINAS WEB<BR>
-POR: GALO DIAZ</H3></center>
+<H3>TRABAJO COLABORATIVO Y NTICS</H3>
+<H3>Grupo N° 4</H3>
+<H3><BR>
+  POR: MA. DOLORES FALCONI <BR>NANCY MONTOYA R.<BR>WILIAN YANZA<BR>GALO DIAZ</H3>
+<H3>Abril 2013</H3>
+</center>
 </body>
 </html>
