cambio en la pagina de los perifericos
cambio en la pagina de los perifericos , teclado, mouse, parlantes y
camara web

--- a/SitioTareaMultimedia/Perifericos.html
+++ b/SitioTareaMultimedia/Perifericos.html
@@ -3,11 +3,38 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>Documento sin título</title>
+<style type="text/css">
+body {
+	background-color: #FC9;
+}
+</style>
 </head>
 <body>
 <center><h1>PERIFERICOS</h1></center>
+<center>
+<img style="visibility:hidden;width:0px;height:0px;" border=0 width=0 height=0 src="http://c.gigcount.com/wildfire/IMP/CXNID=2000002.0NXC/bT*xJmx*PTEzNjUyNzA*NjQ5ODUmcHQ9MTM2NTI3MDUxNTk*MyZwPTk3NTA3MiZkPTAwMCUyMC*lMjBWb2tpJTIwV2lkZ2V*Jmc9/MSZvPWFkZTFiNTgxYTc1OTRiZmVhYTY*NDJjMzFjZDYyMGI4Jm9mPTA=.gif" /><object height="267" width="200" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=9,0,28,0" id="widget_name"><param name="movie" value="http://vhss-d.oddcast.com/vhss_editors/voki_player.swf?doc=http://vhss-d.oddcast.com/php/vhss_editors/getvoki/chsm=506c5b4e0ddda36669601e3bdccd8798%26sc=7450671" /><param name="quality" value="high" /><param name="allowScriptAccess" value="always" /><param name="width" value="200" /><param name="height" value="267" /><param name="allowNetworking" value="all"/><param name="wmode" value="transparent" /><param name="allowFullScreen" value="true" /><embed height="267" width="200" src="http://vhss-d.oddcast.com/vhss_editors/voki_player.swf?doc=http%3A%2F%2Fvhss-d.oddcast.com%2Fphp%2Fvhss_editors%2Fgetvoki%2Fchsm=506c5b4e0ddda36669601e3bdccd8798%26sc=7450671" quality="high" allowScriptAccess="always" allowNetworking="all" wmode="transparent" allowFullScreen="true" pluginspage="http://www.adobe.com/shockwave/download/download.cgi?P1_Prod_Version=ShockwaveFlash" type="application/x-shockwave-flash" name="widget_name"></object></center>
 <font size="8"><b>S</b></font>e denomina periféricos a los aparatos y/o dispositivos auxiliares e independientes conectados a él CPU (unidad central de procesamiento) de una computadora. A través de los periféricos la computadora se comunica con el mundo exterior.
 A pesar de que el término periférico implica a menudo el concepto de "adicional pero no esencial", muchos de ellos son elementos fundamentales para un sistema informático. El teclado y el monitor, imprescindibles en cualquier computadora personal de hoy en día (no lo fueron en los primeros computadores), son posiblemente los periféricos más comunes, y es posible que mucha gente no los considere como tal debido a que generalmente se toman como parte necesaria de una computadora. <br>
 <center><img src="Imagenes/perifericos9.png" width="380" height="380"></center>
+<h2>EL TECLADO </h2>
+Un teclado es un periférico de entrada que permite introducir órdenes y/o datos a la computadora o dispositivo digital. El teclado se conecta al computador por medio de un puerto serial o al USB. Básicamente el teclado esta compuesto por un grupo de teclas, similares a las de una máquina de escribir, correspondiendo cada tecla a uno o varios caracteres, funciones u órdenes.
+<br>
+
+<h2><img src="Imagenes/teclado.jpg" width="332" height="152"></h2>
+<h2> El MOUSE  </h2>
+Un mouse normalmente consta de dos botones: un botón primario (normalmente el botón izquierdo) y un botón secundario (normalmente el botón derecho). El botón primario es el que se utiliza con mayor frecuencia. La mayoría de los mouse también incluyen una rueda de desplazamiento entre los botones que le ayuda a desplazarsepor los documentos y las páginas web de un modo más fácil. En algunos mouse, la rueda de desplazamiento puede presionarse y actuar así como un tercer botón. Los mouse avanzados pueden disponer de botones adicionales que sirven para realizar otras funciones. 
+<p><img src="Imagenes/mouse.jpg" width="262" height="193"></p>
+<h2>LOS PARLANTES</h2>
+<p>Son la vía de salida   de los sonidos (voz, música, efectos sonoros, ruidos) generados en el   computador, mas especificamente por la tarjeta de sonido, Se conectan en   la parte posterior de la torre del computador y funcionan como los   parlantes convencionales. Hay muchos modelos de parlantes, estan los   basicos con dos altavoces y otros mas avanzados que cuentan con sonido   envolvente, surround, sobwofer, sistemas de 2.1, 4.1, 5.1, 6.1, 7.1   canales entre otros. También es posible conectar auriculares al   computador. </p>
+<p><img src="Imagenes/parlantes.jpg" width="280" height="180"></p>
+<h2>IMPRESORAS</h2>
+<p>Una <strong>impresora</strong> es un <a href="http://es.wikipedia.org/wiki/Perif%C3%A9rico_%28inform%C3%A1tica%29" title="Periférico (informática)">dispositivo periférico</a> del <a href="http://es.wikipedia.org/wiki/Ordenador" title="Ordenador">ordenador</a> que permite producir una gama permanente de textos o gráficos de   documentos almacenados en un formato electrónico, imprimiéndolos en   medios físicos, normalmente en <a href="http://es.wikipedia.org/wiki/Papel" title="Papel">papel</a>, utilizando <a href="http://es.wikipedia.org/wiki/Cartuchos_de_tinta" title="Cartuchos de tinta">cartuchos de tinta</a> o tecnología <a href="http://es.wikipedia.org/wiki/L%C3%A1ser" title="Láser">láser</a>.</p>
+<p>Muchas impresoras son usadas como periféricos, y están   permanentemente unidas al ordenador por un cable. Otras impresoras,   llamadas impresoras de red, tienen una interfaz de red interno   (típicamente wireless o ethernet), y que puede servir como un   dispositivo para imprimir en papel algún documento para cualquier   usuario de la red.</p>
+<p><img src="Imagenes/impresora.jpg" width="255" height="198"></p>
+<h2>CÁMARA WEB</h2>
+<p>Una cámara  web o cámara de red (en <a href="http://es.wikipedia.org/wiki/Idioma_ingl%C3%A9s" title="Idioma inglés">inglés</a>: <em>webcam</em>) es una pequeña <a href="http://es.wikipedia.org/wiki/C%C3%A1mara_digital" title="Cámara digital">cámara  digital</a> conectada a una <a href="http://es.wikipedia.org/wiki/Computadora" title="Computadora">computadora</a> la cual puede capturar imágenes y transmitirlas a través de <a href="http://es.wikipedia.org/wiki/Internet" title="Internet">Internet</a>,  ya sea a una <a href="http://es.wikipedia.org/wiki/P%C3%A1gina_web" title="Página web">página web</a> o a otra u otras computadoras de  forma privada.<br>
+Las cámaras web necesitan una computadora para  transmitir las imágenes. Sin embargo, existen otras cámaras autónomas que tan  sólo necesitan un punto de acceso a la red informática, bien sea <a href="http://es.wikipedia.org/wiki/Ethernet" title="Ethernet">ethernet</a> o <a href="http://es.wikipedia.org/wiki/Red_inal%C3%A1mbrica" title="Red inalámbrica">inalámbrico</a>. Para diferenciarlas las cámaras  web se las denomina <a href="http://es.wikipedia.org/wiki/C%C3%A1mara_de_red" title="Cámara de red">cámaras de red</a>.</p>
+<p><img src="Imagenes/camara web.jpg" width="226" height="223"></p>
+<p>&nbsp;</p>
 </body>
 </html>
