cambio en salida
cambio en salida

--- a/SitioTareaMultimedia/Per_Salida.html
+++ b/SitioTareaMultimedia/Per_Salida.html
@@ -3,6 +3,14 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>Documento sin título</title>
+<style type="text/css">
+body {
+	background-color: #CF6;
+}
+body,td,th {
+	color: #03C;
+}
+</style>
 </head>
 <body>
 <center><h1>PERIFERICOS DE SALIDA</h1></center>
@@ -15,6 +23,50 @@
 <li>Proyector digital
 <li>Auriculares
 </ul>
-<center><img src="Imagenes/2MonitorAgr.png" width="450" height="350"><img src="Imagenes/4MonitorAgr.png" width="450" height="350"></center>
+<center>
+  <p><img src="../../../../Desktop/imagenes/1325.jpg" width="175" height="192"><img src="Imagenes/2MonitorAgr.png" width="323" height="221"><img src="Imagenes/4MonitorAgr.png" width="288" height="244"><img src="../../../../Desktop/imagenes/impresora-epson.jpg" width="250" height="187">
+  </p>
+  <p>&nbsp;</p>
+  <p align="justify">Un periférico de salida es un <strong>dispositivo electrónico capaz de imprimir, mostrar o emitir señales que  sean fácilmente interpretables por el usuario</strong>. Básicamente, un periférico  de salida <strong>tiene   la función de mostrarle  al usuario operador de la computadora el   resultado de las operaciones  realizadas o procesadas por la misma</strong>. <br>
+    <br>
+  </p>
+  <p align="justify">Es decir que <strong>mediante  la utilización del periférico de salida la computadora se comunica y nos  muestra el resultado de nuestro trabajo</strong>, pudiendo observarlos fácilmente por  intermedio del monitor o la impresora, los dos <a href="http://www.informatica-hoy.com.ar/aprender-informatica/Perifericos-de-la-computadora.php">periféricos </a>de   salida más  utilizados. También existe un tercer tipo de periférico de   salida, comúnmente  conocido como parlantes o auriculares, los cuales   nos permitirán escuchar lo  que la computadora tiene para decir.</p>
+  <p align="justify">Como mencionamos, los periféricos de salida más comunes son  el   monitor y la impresora, y debajo de estas líneas podremos conocer un   poco  más de cerca algunas de sus características técnicas más   relevantes.</p>
+  <p align="justify"><u>Monitor</u></p>
+  <p align="justify">El monitor de nuestra PC es sin duda <strong>el dispositivo de salida más importante del conjunto, </strong>ya que sin él  no podríamos saber qué es lo que está pasando en la computadora.</p>
+  <p align="justify">Este dispositivo de visualización <strong>está constituido por diversos puntos luminosos denominados píxeles</strong>,  siendo la cantidad de píxeles lo que determina la resolución gráfica del mismo; <strong>cuanto mayor que sea la cantidad de  píxeles, mayor es la resolución</strong>, pues la misma imagen es reproducida en un  número mayor de puntos mejorando la visualización de los detalles. </p>
+  <p align="justify">Existen dos tipos principales de monitor, <strong>el denominado CRT o tubo de rayos catódicos  y los nuevos monitores de panel planos</strong>, de los cuales podemos encontrar en  el mercado dos variantes, de LED o LCD.</p>
+  <p align="justify">Los <strong>monitores CRT</strong> son el tipo más antiguo de   visualizador, prácticamente en desuso en la  actualidad, en el mercado   ya no se consiguen nuevos, esto es debido a que han  sido reemplazados   por los monitores de LCD o LED<strong>, los cuales otorgan una larga serie de ventajas con respecto a éste</strong>.</p>
+  <br>
+  <div align="center"> <img src="http://www.informatica-hoy.com.ar/imagenes-notas/2011/monitor-crt.jpg" alt="Periféricos de salida de la PC" border="0" height="203" width="264"></div>
+  <br>
+  <p align="justify">Los <strong><a href="http://www.informatica-hoy.com.ar/hardware-monitores/Comprar-monitor-LED.php">monitores LED</a> o también <a href="http://www.informatica-hoy.com.ar/hardware-monitores/Monitores-LCD.php">los monitores con tecnología LCD</a></strong> utilizan métodos muy  diferentes a las usadas con los monitores CRT, y   ofrecen muchas ventajas con  respecto al modo en que se presentan los   datos en la pantalla, generalmente más  grande y en formato de pantalla   ancha.</p>
+  <br>
+  <div align="center"> <img src="http://www.informatica-hoy.com.ar/imagenes-notas/2011/monitor-lcd-aoc.jpg" alt="Periféricos de salida de la PC" border="0" height="201" width="409"></div>
+  <br>
+  <p align="justify"><u>Impresora</u></p>
+  <p align="justify">La impresora es otro de los periféricos de salida más  importantes, <strong>ya que fueron diseñadas  para poder perpetuar en papel los resultados o datos procesados por la  computadora</strong>.</p>
+  <p align="justify">Al contrario que en el caso del monitor, <strong>la impresora no es un dispositivo  imprescindible</strong>,   pero es de especial importancia cuando necesitamos representar  la   información procesada por la PC en papel en forma de listados, gráficos,    dibujos, imágenes y demás. </p>
+  <br>
+  <div align="center"> <img src="http://www.informatica-hoy.com.ar/imagenes-notas/2011/impresora-multifuncion.jpg" alt="Periféricos de salida de la PC" border="0" height="181" width="233"></div>
+  <br>
+  <p align="justify">En la actualidad existen varios tipos de impresoras, <a href="http://www.informatica-hoy.com.ar/hardware-perifericos/Guia-para-comprar-una-impresora-Laser-o-multifuncion.php">siendo  las más utilizadas en el momento las de láser y las impresoras multifunción</a>,  una clase especial de dispositivo que reúne <strong>scanner, fotocopiadora e impresora en un mismo aparato</strong>.</p>
+  <br>
+  <div align="center"> <img src="http://www.informatica-hoy.com.ar/imagenes-notas/2011/plotter-hp.jpg" alt="Periféricos de salida de la PC" border="0" height="271" width="300"></div>
+  <br>
+  <p align="justify">Cabe destacar que también podemos encontrar otros tipos de    impresoras, las cuales son utilizadas en ámbitos más especializados.   Entre  ellas podemos mencionar las <strong>impresoras  láser color, plotters e impresoras para gigantografías</strong>, todas ellas usadas  en el ámbito gráfico y las <strong>impresoras de  matriz de puntos</strong>, si bien una tecnología bastante antigua, aún muy  utilizadas por comercios.</p>
+  <p>&nbsp;</p>
+  <p align="justify"><u>Parlantes</u></p>
+  <p align="justify">Los parlantes o auricularesson los encargados de reproducir los   sonidos que emite la computadoraa través de la placa de audio de la   misma.</p>
+  <br>
+  <div align="center"> <img src="http://www.informatica-hoy.com.ar/imagenes-notas/2011/parlantes-stereo.jpg" alt="Periféricos de salida de la PC" border="0" height="188" width="253"></div>
+  <br>
+  <p align="justify">Junto a los auriculares son el dispositivo más utilizado  para   escuchar música a través del reproductor de audio de nuestro sistema   operativo.</p>
+  <p align="justify">En la actualidad podemos encontrar parlantes tanto estéreo,  es decir   2 canales, izquierdo y derecho, así como multicanal, conformado por    hasta 7 canales de audio distintos.</p>
+  <br>
+  <div align="center"> <img src="http://www.informatica-hoy.com.ar/imagenes-notas/2011/parlantes-8.1.jpg" alt="Periféricos de salida de la PC" border="0" height="163" width="237"></div>
+  <br>
+<p align="justify">&nbsp;</p>
+</center>
 </body>
 </html>
