Cambio de Banner de titulo

--- a/SitioTareaMultimedia/Encabezado.html
+++ b/SitioTareaMultimedia/Encabezado.html
@@ -5,6 +5,7 @@
 <title>Documento sin título</title>
 </head>
 <body>
-<center><img src="multimedia/titulo.jpg" width="551" height="102"></center>
+<center><img src="Imagenes/Banner.png" width="483" height="102">
+</center>
 </body>
 </html>
