--- a/SitioTareaMultimedia/Per_Entrada.html
+++ b/SitioTareaMultimedia/Per_Entrada.html
@@ -2,13 +2,27 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Documento sin título</title>
+<title>Periféricos de Entrada</title>
+<style type="text/css">
+.letra {
+	font-family: Verdana, Geneva, sans-serif;
+}
+body {
+	background-color: #0C6;
+}
+body,td,th {
+	font-size: 12px;
+}
+</style>
 </head>
 <body>
-<center><H1>PERIFERICOS DE ENTRADA</H1></center>
-<font size="8"><b>S</b></font>on los que permiten introducir datos externos a la computadora para su posterior tratamiento por parte del CPU.<br>Estos datos pueden provenir de distintas fuentes, siendo la principal un ser humano. Los periféricos de entrada más habituales son:<br>
+<center>
+<H1>PERIFÉRICOS DE ENTRADA</H1></center>
+<div align="justify"><span class="letra">Son los que permiten introducir datos externos a la computadora para su posterior tratamiento por parte del CPU. Estos dispositivos permiten al usuario del computador introducir datos, comandos y programas en    el CPU. El    dispositivo de entrada más común es un teclado similar al de las máquinas de escribir. La información introducida con el mismo, es    transformada por el ordenador en modelos reconocibles. Los datos se leen de los dispositivos de    entrada y se almacenan en la memoria central o interna. Los Dispositivos de Entrada, convierten la    información en señales eléctricas que se almacenan en la memoria central. Estos datos pueden provenir de distintas fuentes, siendo la principal un ser humano. Los periféricos de entrada más habituales son:</span><br>
+</div>
+<div><span class="letra">
 <ul>
-<li>Teclado
+  <li>Teclado
 <li>Micrófono
 <li>Escáner
 <li>Ratón o mouse
@@ -16,7 +30,69 @@
 <li>Cámara web
 <li>Lápiz óptico
 <li>Cámara digital
-</ul>
-<center><img src="Imagenes/3mouseArg.png" width="450" height="350"><img src="Imagenes/1ModTecladoAgr.png" width="450" height="350"></center>
+</ul></span></div>
+<center>
+  <p>&nbsp;</p>
+  <span class="letra">
+  <table width="1229" border="0" align="center">
+    <tr align="center">
+      <td width="242"><strong>Teclado</strong></td>
+      <td width="10">&nbsp;</td>
+      <td width="300"><strong>Micrófono</strong></td>
+      <td width="11">&nbsp;</td>
+      <td width="332"><strong>Ratón</strong></td>
+      <td width="12">&nbsp;</td>
+      <td width="292"><strong>Escáner</strong></td>
+    </tr>
+    <tr align="center">
+      <td><img src="Imagenes/teclado1.jpg" width="189" height="120"></td>
+      <td>&nbsp;</td>
+      <td><img src="Imagenes/microfono.jpg" alt="" width="215" height="122"></td>
+      <td>&nbsp;</td>
+      <td><img src="Imagenes/raton.jpg" alt="" width="193" height="128"></td>
+      <td>&nbsp;</td>
+      <td><img src="Imagenes/escaner.jpg" alt="" width="186" height="128"></td>
+    </tr>
+    <tr align="center">
+      <td><p align="justify"><strong></strong> El teclado es un dispositivo eficaz    para introducir datos no gráficos como rótulos de imágenes asociados con un despliegue de gráficas. </p></td>
+      <td>&nbsp;</td>
+      <td><div align="justify">Los micrófonos son    los transductores encargados de transformar energía    acústica en energía    eléctrica, permitiendo, por lo tanto el registro, almacenamiento, transmisión y procesamiento    electrónico de las señales de audio.</div></td>
+      <td>&nbsp;</td>
+      <td><div align="justify">Es    un dispositivo electrónico que nos permite dar    instrucciones a nuestra computadora a través de un cursor    que aparece en la pantalla y haciendo clic para que se lleve a    cabo una acción determinada.</div></td>
+      <td>&nbsp;</td>
+      <td><p align="justify">Permite la introducción de imágenes    gráficas al computador mediante un sistema de matrices de    puntos, como resultado de un barrido óptico del documento.</p>
+      <p>&nbsp;</p></td>
+    </tr>
+    <tr align="center">
+      <td><p><strong>Cámara Digital</strong></p></td>
+      <td>&nbsp;</td>
+      <td><strong>Cámara Web</strong></td>
+      <td>&nbsp;</td>
+      <td><strong>Lápiz Óptico</strong></td>
+      <td>&nbsp;</td>
+      <td><p><strong>Joystick</strong></p></td>
+    </tr>
+    <tr align="center">
+      <td><p><img src="Imagenes/camara.jpg" width="182" height="163"></p></td>
+      <td>&nbsp;</td>
+      <td><img src="Imagenes/camara web.jpg" alt="" width="184" height="166"></td>
+      <td>&nbsp;</td>
+      <td><img src="Imagenes/lapiz.jpg" alt="" width="224" height="164"></td>
+      <td>&nbsp;</td>
+      <td><img src="Imagenes/3mouseArg.png" width="228" height="192"></td>
+    </tr>
+    <tr align="center">
+      <td><div align="justify">Se conecta al ordenador    y le transmite las imágenes que capta, pudiendo ser    modificada y retocada, o volverla a tomar en caso de que este    mal. </div></td>
+      <td>&nbsp;</td>
+      <td><div align="justify">Es una cámara de      pequeñas dimensiones. Sólo es la cámara,      no tiene LCD. Tiene que estar conectada al PC para poder      funcionar, y esta transmite las imágenes al ordenador.      Su uso es generalmente para videoconferencias por Internet.</div></td>
+      <td>&nbsp;</td>
+      <td><div align="justify">Es una unidad        de ingreso de información que funciona acoplada a una        pantalla fotosensible. Es un dispositivo exteriormente        semejante a un lápiz, con un mecanismo de resorte en        la punta o en un botón lateral, mediante el cual se        puede seleccionar información visualizada en la        pantalla. </div></td>
+      <td>&nbsp;</td>
+      <td> <div align="justify">Es normalmente un dispositivo señalador    relativo, que mueve un objeto en la pantalla cuando la palanca se    mueve con respecto al centro y que detiene el movimiento cuando se suelta</div></td>
+    </tr>
+  </table>
+  </span>
+  <p>&nbsp;</p>
+</center>
 </body>
 </html>
