--- a/SitioTareaMultimedia/Per_Salida.html
+++ b/SitioTareaMultimedia/Per_Salida.html
@@ -68,5 +68,6 @@ body,td,th {
   <br>
 <p align="justify">&nbsp;</p>
 </center>
+<img src="Imagenes/gif.jpg" width="293" height="172" align="absmiddle">
 </body>
 </html>
