modificado entrada color
modificado entrada color

--- a/SitioTareaMultimedia/Per_Entrada.html
+++ b/SitioTareaMultimedia/Per_Entrada.html
@@ -8,7 +8,7 @@
 	font-family: Verdana, Geneva, sans-serif;
 }
 body {
-	background-color: #0C6;
+	background-color: #6CF;
 }
 body,td,th {
 	font-size: 12px;
