--- a/SitioTareaMultimedia/Per_Entrada.html
+++ b/SitioTareaMultimedia/Per_Entrada.html
@@ -92,7 +92,7 @@ body,td,th {
     </tr>
   </table>
   </span>
-  <p>&nbsp;</p>
+  <p><img src="Imagenes/images.jpg" width="293" height="172"></p>
 </center>
 </body>
 </html>
